# Rengin

./: Cargo.toml  README.md  renderdoc1.rdc
.cargo/: config.toml
assets/scenes/: cornellbox.yaml  cornellbox2.yaml  coverScene.yaml  fresnel.yaml  models.yaml  reflectionScene.yaml  table.yaml  test.yaml
src/: lib.rs  main.rs
src/engine/: asset_importer.rs  bvh.rs  mod.rs  rt_primitives.rs  scene_importer.rs
src/renderer/: mod.rs  vk_utils.rs  vulkan_utils.rs  wgpu_utils.rs
src/shaders/: constants.wgsl  hit_params.wgsl  intersects.wgsl  mandelbrot.rs  mod.rs  pathtracer.wgsl  random.wgsl  raygen.wgsl  raysort.wgsl  raytracer.comp  raytracer.frag  raytracer.frag.spv  raytracer.frag.wgsl  raytracer.rs  raytracer.spv  raytracer.vert  raytracer.vert.wgsl  raytracer.wgsl  render.frag.wgsl  render.vert.wgsl  rt.wgsl  types.wgsl  ubo.wgsl  ubo_rt.wgsl  whitted_raytracer.wgsl
src/shaders/compiled/: pathtracer.spv  render.frag.spv  render.vert.spv
