[package]
name = "rengin"
version = "0.1.0"
authors = ["Ilia <ilia.shibaev@gmail.com>"]
edition = "2021"

[workspace]
members = ["run-wasm"]

[features]
default = ["native"]
native = ["glam/std"]
webgl = ["glam/libm"]

[dependencies]
wgpu = { version = "0.20", features = ["vulkan-portability"] }
glam = { version = "0.27", default-features = false, features = ["bytemuck"] }
winit = "0.29"
tobj = "4.0"
bincode = "1.3.3"
env_logger = "0.11"
log = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
rand = "0.8.5"
yaml-rust = "0.4"
linked-hash-map = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
image = "0.25"
itertools = "0.13"
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = { version = "0.3" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-rs-async-executor = "0.9.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen-futures = "0.4.42"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
instant = { version = "0.1", features = ["stdweb"] }
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
debug = true
