[package]
name = "rengin"
version = "0.1.0"
authors = ["Ilia <ilia.shibaev@gmail.com>"]
edition = "2024"

[features]
default = ["native"]
native = ["glam/std"]
webgl = ["glam/libm"]

[dependencies]
wgpu = { version = "26.0", features = ["vulkan-portability"] }
glam = { version = "0.30", default-features = false, features = ["bytemuck"] }
winit = "0.30"
pollster = "0.4"
tobj = "4.0"
bincode = "2.0"
env_logger = "0.11"
log = "0.4"
bytemuck = { version = "1.23", features = ["derive"] }
rand = "0.9"
yaml-rust2 = "0.10"
linked-hash-map = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
image = "0.25"
itertools = "0.14"
clap = { version = "4.5", features = ["derive"] }
cfg-if = "1"
futures = { version = "0.3" }

[profile.release]
debug = true
